--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <!-- Paste your embed code here -->
-    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS6_pszX1onmXjk7KcJw5KMPuddLpIJ4t9UgpfQ-MGgkznNz80JXg5Wafd4Ve-gd9N9fYJbew9QvMix/pubhtml?widget=true&amp;headers=false"></iframe>
+    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS6_pszX1onmXjk7KcJw5KMPuddLpIJ4t9UgpfQ-MGgkznNz80JXg5Wafd4Ve-gd9N9fYJbew9QvMix/pubhtml?widget=true&amp;headers=false" width="100%" height="1280px"></iframe>
 </body>
 </html>
